Fix QMediaPlayer::hasAudio/Video() and related signals

Ensure we don't emit the signal more often than required by moving
some state logic into the platform independent code and fixing the
logic in the gstreamer backend.

Fixes: QTBUG-95317
Change-Id: I9fcf581bf3992763c1874723faa7909cee2162f9
Reviewed-by: André de la Rocha <andre.rocha@qt.io>